12 March 2010: Wouter
	- Reordered configure checks so fork and -lnsl -lsocket checks are
	  earlier, and thus later checks benefit from and do not hinder them.
	- iana portlist updated.
	- ldns tarball updated.
	- Fix python use when multithreaded.
	- Fix solaris python compile.
	- Include less in config.h and include per code file for ldns, ssl.

11 March 2010: Wouter
	- another memory allocation option: --enable-alloc-nonregional.
	  exposes the regional allocations to other memory purifiers.
	- fix for memory alignment in struct sock_list allocation.
	- Fix for MacPorts ldns without ssl default, unbound checks if ldns
	  has dnssec functionality and uses the builtin if not.
	- Fix daemonize on Solaris 10, it did not detach from terminal.
	- tag 1.4.3 created.
	- trunk is 1.4.4 in development.
	- spelling fix in validation error involving cnames.

10 March 2010: Wouter
	- --enable-alloc-lite works with test set.
	- portability in the testset: printf format conversions, prototypes.

9 March 2010: Wouter
	- tag 1.4.2 created.
	- trunk is 1.4.3 in development.
	- --enable-alloc-lite debug option.

8 March 2010: Wouter
	- iana portlist updated.

4 March 2010: Wouter
	- Fix crash in control channel code.

3 March 2010: Wouter
	- better casts in pipe code, brackets placed wrongly.
	- iana portlist updated.

1 March 2010: Wouter
	- make install depends on make all.
	- Fix 5011 auto-trust-anchor-file initial read to skip RRSIGs.
	- --enable-checking: enables assertions but does not look nonproduction.
	- nicer VERB_DETAIL (verbosity 2, unbound-host -d) output, with
	  nxdomain and nodata distinguished.
	- ldns tarball updated.
	- --disable-rpath fixed for libtool not found errors.
	- new fedora specfile from Fedora13 in contrib from Paul Wouters.

26 February 2010: Wouter
	- Fixup prototype for lexer cleanup in daemon code.
	- unbound-control list_stubs, list_forwards, list_local_zones and
	  list_local_data.

24 February 2010: Wouter